# voxel-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  optimisations  run.sh
src/: CMakeLists.txt  chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  frustum.cpp  frustum.h  lerp_points.h  main.cpp  old_main.cpp  player_camera.cpp  player_camera.h  voxel_engine.cpp  voxel_engine.h
src/common/: CMakeLists.txt  color.h  common.h  shader_program.cpp  shader_program.h  window.cpp  window.h
src/shaders/: learnopengl.frag  learnopengl.vert  voxel.vert
